--- a/src/app/components/login/user-select/user-select.component.html
+++ b/src/app/components/login/user-select/user-select.component.html
@@ -1,62 +1,49 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button style="color: white !important"></ion-back-button>
+      <ion-menu-button style="color: white !important"></ion-menu-button>
     </ion-buttons>
-    <ion-title>
-      Selecciona Usuario
-    </ion-title>
+    <ion-title> Selecciona uno </ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content padding>
   <div class="user-select-contenet">
-    <!-- <ion-list>
-      <ion-item [routerLink]="['/new-buyer']">
-        <ion-radio color="secondary" mode="md" slot="start"></ion-radio>
-        <ion-label text-wrap>
-          <h2>Cliente</h2>
-          <p>Usuario para aquirir o rentar propiedades</p>
-        </ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-radio color="secondary" mode="md" slot="start"></ion-radio>
-        <ion-label text-wrap>
-          <h2>Vendedor</h2>
-          <p>Usuario para vender o dar a rentar propiedades</p>
-        </ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-radio color="secondary" mode="md" slot="start"></ion-radio>
-        <ion-label text-wrap>
-          <h2>Asesor</h2>
-          <p>Usuario para vender o dar a rentar propiedades</p>
-        </ion-label>
-      </ion-item>
-    </ion-list> -->
-    <ion-card class="user-select-card" [routerLink]="['/new-buyer']">
-      <ion-card-header>
-        <ion-card-title>Cliente</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <ion-label>Usuario para aquirir o rentar propiedades</ion-label>
-      </ion-card-content>
-    </ion-card>
-    <ion-card class="user-select-card">
-      <ion-card-header>
-        <ion-card-title>Constructor</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <ion-label>Usuario para aquirir o rentar propiedades</ion-label>
-      </ion-card-content>
-    </ion-card>
-    <ion-card class="user-select-card">
-      <ion-card-header>
-        <ion-card-title>Vendedor</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <ion-label>Usuario para aquirir o rentar propiedades</ion-label>
-      </ion-card-content>
-    </ion-card>
+    <ng-container
+      *ngIf="isLoad; then: thenTemplate; else: elseTemplate"
+    ></ng-container>
+    <ng-template #thenTemplate>
+      <ng-container *ngIf="preBuyer.preBuild.length > 0; else: elseTemplate2">
+        <ion-card
+          class="user-select-card"
+          *ngFor="let build of preBuyer.preBuild"
+          (click)="goToBuild(build._id)"
+        >
+          <ion-card-header>
+            <ion-card-title>{{ build.name }}</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-label text-wrap>
+              <p><b>Fecha Alta</b> {{ formatDates(build.timestamp) }}</p>
+              <p><b>Ciudad</b> {{ build.city }}</p>
+              <p><b>Notas</b> {{ build.notes }}</p>
+            </ion-label>
+            <ion-item lines="none">
+              <ion-icon
+                style="color:  #F5811E"
+                name="arrow-forward"
+                slot="end"
+              ></ion-icon>
+              <ion-label text-wrap>Ver propiedad</ion-label>
+            </ion-item>
+          </ion-card-content>
+        </ion-card>
+      </ng-container>
+      <ng-template #elseTemplate2>
+        <h6>No hay elementos registrados</h6>
+      </ng-template>
+    </ng-template>
+    <ng-template #elseTemplate>
+      <app-general-skeleton></app-general-skeleton>
+    </ng-template>
   </div>
-
 </ion-content>
